library/src/libqtextedit.h

typedef QTextEdit::ExtraSelection QTextEdit__ExtraSelection;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMimeData QMimeData;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QRegularExpression QRegularExpression;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QTextCursor QTextCursor;
typedef struct QTextEdit QTextEdit;
typedef struct QTextEdit__ExtraSelection QTextEdit__ExtraSelection;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
void QTextEdit_SelectionChanged(QTextEdit* self);
void QTextEdit_CursorPositionChanged(QTextEdit* self);
bool QTextEdit_Event(QTextEdit* self, QEvent* e);
void QTextEdit_TimerEvent(QTextEdit* self, QTimerEvent* e);
void QTextEdit_KeyPressEvent(QTextEdit* self, QKeyEvent* e);
void QTextEdit_KeyReleaseEvent(QTextEdit* self, QKeyEvent* e);
void QTextEdit_ResizeEvent(QTextEdit* self, QResizeEvent* e);
void QTextEdit_PaintEvent(QTextEdit* self, QPaintEvent* e);
void QTextEdit_MousePressEvent(QTextEdit* self, QMouseEvent* e);
void QTextEdit_MouseMoveEvent(QTextEdit* self, QMouseEvent* e);
void QTextEdit_MouseReleaseEvent(QTextEdit* self, QMouseEvent* e);
void QTextEdit_MouseDoubleClickEvent(QTextEdit* self, QMouseEvent* e);
bool QTextEdit_FocusNextPrevChild(QTextEdit* self, bool next);
void QTextEdit_ContextMenuEvent(QTextEdit* self, QContextMenuEvent* e);
void QTextEdit_DragEnterEvent(QTextEdit* self, QDragEnterEvent* e);
void QTextEdit_DragLeaveEvent(QTextEdit* self, QDragLeaveEvent* e);
void QTextEdit_DragMoveEvent(QTextEdit* self, QDragMoveEvent* e);
void QTextEdit_DropEvent(QTextEdit* self, QDropEvent* e);
void QTextEdit_FocusInEvent(QTextEdit* self, QFocusEvent* e);
void QTextEdit_FocusOutEvent(QTextEdit* self, QFocusEvent* e);
void QTextEdit_ShowEvent(QTextEdit* self, QShowEvent* param1);
void QTextEdit_ChangeEvent(QTextEdit* self, QEvent* e);
void QTextEdit_WheelEvent(QTextEdit* self, QWheelEvent* e);
QMimeData* QTextEdit_CreateMimeDataFromSelection(const QTextEdit* self);
bool QTextEdit_CanInsertFromMimeData(const QTextEdit* self, QMimeData* source);
void QTextEdit_InsertFromMimeData(QTextEdit* self, QMimeData* source);
void QTextEdit_InputMethodEvent(QTextEdit* self, QInputMethodEvent* param1);
void QTextEdit_ScrollContentsBy(QTextEdit* self, int dx, int dy);
void QTextEdit_DoSetTextCursor(QTextEdit* self, QTextCursor* cursor);
libqt_string QTextEdit_Tr2(const char* s, const char* c);
libqt_string QTextEdit_Tr3(const char* s, const char* c, int n);
bool QTextEdit_Find2(QTextEdit* self, libqt_string exp, int options);
bool QTextEdit_Find22(QTextEdit* self, QRegularExpression* exp, int options);
libqt_string QTextEdit_ToMarkdown1(const QTextEdit* self, int features);
void QTextEdit_MoveCursor2(QTextEdit* self, int operation, int mode);
void QTextEdit_ZoomIn1(QTextEdit* self, int range);
void QTextEdit_ZoomOut1(QTextEdit* self, int range);
void QTextEdit_ZoomInF(QTextEdit* self, float range);
QTextEdit__ExtraSelection* QTextEdit__ExtraSelection_new(QTextEdit__ExtraSelection* param1);
void QTextEdit__ExtraSelection_OperatorAssign(QTextEdit__ExtraSelection* self, QTextEdit__ExtraSelection* param1);