src/qt/libqtextedit.bf

	[LinkName("QTextEdit_SelectionChanged")]
	public static extern void QTextEdit_SelectionChanged(Self* c_this);
	[LinkName("QTextEdit_CursorPositionChanged")]
	public static extern void QTextEdit_CursorPositionChanged(Self* c_this);
	[LinkName("QTextEdit_Event")]
	public static extern bool QTextEdit_Event(Self* c_this, QEvent* e);
	[LinkName("QTextEdit_TimerEvent")]
	public static extern void QTextEdit_TimerEvent(Self* c_this, QTimerEvent* e);
	[LinkName("QTextEdit_KeyPressEvent")]
	public static extern void QTextEdit_KeyPressEvent(Self* c_this, QKeyEvent* e);
	[LinkName("QTextEdit_KeyReleaseEvent")]
	public static extern void QTextEdit_KeyReleaseEvent(Self* c_this, QKeyEvent* e);
	[LinkName("QTextEdit_ResizeEvent")]
	public static extern void QTextEdit_ResizeEvent(Self* c_this, QResizeEvent* e);
	[LinkName("QTextEdit_PaintEvent")]
	public static extern void QTextEdit_PaintEvent(Self* c_this, QPaintEvent* e);
	[LinkName("QTextEdit_MousePressEvent")]
	public static extern void QTextEdit_MousePressEvent(Self* c_this, QMouseEvent* e);
	[LinkName("QTextEdit_MouseMoveEvent")]
	public static extern void QTextEdit_MouseMoveEvent(Self* c_this, QMouseEvent* e);
	[LinkName("QTextEdit_MouseReleaseEvent")]
	public static extern void QTextEdit_MouseReleaseEvent(Self* c_this, QMouseEvent* e);
	[LinkName("QTextEdit_MouseDoubleClickEvent")]
	public static extern void QTextEdit_MouseDoubleClickEvent(Self* c_this, QMouseEvent* e);
	[LinkName("QTextEdit_FocusNextPrevChild")]
	public static extern bool QTextEdit_FocusNextPrevChild(Self* c_this, bool next);
	[LinkName("QTextEdit_ContextMenuEvent")]
	public static extern void QTextEdit_ContextMenuEvent(Self* c_this, QContextMenuEvent* e);
	[LinkName("QTextEdit_DragEnterEvent")]
	public static extern void QTextEdit_DragEnterEvent(Self* c_this, QDragEnterEvent* e);
	[LinkName("QTextEdit_DragLeaveEvent")]
	public static extern void QTextEdit_DragLeaveEvent(Self* c_this, QDragLeaveEvent* e);
	[LinkName("QTextEdit_DragMoveEvent")]
	public static extern void QTextEdit_DragMoveEvent(Self* c_this, QDragMoveEvent* e);
	[LinkName("QTextEdit_DropEvent")]
	public static extern void QTextEdit_DropEvent(Self* c_this, QDropEvent* e);
	[LinkName("QTextEdit_FocusInEvent")]
	public static extern void QTextEdit_FocusInEvent(Self* c_this, QFocusEvent* e);
	[LinkName("QTextEdit_FocusOutEvent")]
	public static extern void QTextEdit_FocusOutEvent(Self* c_this, QFocusEvent* e);
	[LinkName("QTextEdit_ShowEvent")]
	public static extern void QTextEdit_ShowEvent(Self* c_this, QShowEvent* param1);
	[LinkName("QTextEdit_ChangeEvent")]
	public static extern void QTextEdit_ChangeEvent(Self* c_this, QEvent* e);
	[LinkName("QTextEdit_WheelEvent")]
	public static extern void QTextEdit_WheelEvent(Self* c_this, QWheelEvent* e);
	[LinkName("QTextEdit_CreateMimeDataFromSelection")]
	public static extern QMimeData* QTextEdit_CreateMimeDataFromSelection(Self* c_this);
	[LinkName("QTextEdit_CanInsertFromMimeData")]
	public static extern bool QTextEdit_CanInsertFromMimeData(Self* c_this, QMimeData* source);
	[LinkName("QTextEdit_InsertFromMimeData")]
	public static extern void QTextEdit_InsertFromMimeData(Self* c_this, QMimeData* source);
	[LinkName("QTextEdit_InputMethodEvent")]
	public static extern void QTextEdit_InputMethodEvent(Self* c_this, QInputMethodEvent* param1);
	[LinkName("QTextEdit_ScrollContentsBy")]
	public static extern void QTextEdit_ScrollContentsBy(Self* c_this, int32 dx, int32 dy);
	[LinkName("QTextEdit_DoSetTextCursor")]
	public static extern void QTextEdit_DoSetTextCursor(Self* c_this, QTextCursor* cursor);
	[LinkName("QTextEdit_ZoomInF")]
	public static extern void QTextEdit_ZoomInF(Self* c_this, float range);
	[LinkName("QTextEdit_Tr2")]
	public static extern libqt_string QTextEdit_Tr2(char8[] s, char8[] c);
	[LinkName("QTextEdit_Tr3")]
	public static extern libqt_string QTextEdit_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QTextEdit_Find2")]
	public static extern bool QTextEdit_Find2(Self* c_this, libqt_string exp, int64 options);
	[LinkName("QTextEdit_Find22")]
	public static extern bool QTextEdit_Find22(Self* c_this, QRegularExpression* exp, int64 options);
	[LinkName("QTextEdit_ToMarkdown1")]
	public static extern libqt_string QTextEdit_ToMarkdown1(Self* c_this, int64 features);
	[LinkName("QTextEdit_MoveCursor2")]
	public static extern void QTextEdit_MoveCursor2(Self* c_this, int64 operation, int64 mode);
	[LinkName("QTextEdit_ZoomIn1")]
	public static extern void QTextEdit_ZoomIn1(Self* c_this, int32 range);
	[LinkName("QTextEdit_ZoomOut1")]
	public static extern void QTextEdit_ZoomOut1(Self* c_this, int32 range);
}
public struct QTextEdit__ExtraSelection
{
	[LinkName("QTextEdit__ExtraSelection_new")]
	public static extern QTextEdit__ExtraSelection* QTextEdit__ExtraSelection_new(QTextEdit__ExtraSelection* param1);
	[LinkName("QTextEdit__ExtraSelection_OperatorAssign")]
	public static extern void QTextEdit__ExtraSelection_OperatorAssign(Self* c_this, QTextEdit__ExtraSelection* param1);
}